--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,5 +1,7 @@
 name: Create Release
 
+permissions: read-all
+
 on:
   workflow_dispatch:
     inputs:
@@ -7,17 +9,17 @@ on:
         description: 'Semantic version (major | minor | patch | premajor | preminor | prepatch | prerelease)'
         default: 'patch'
         required: true
-        
+
 jobs:
   version:
     name: Create version
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
       with:
         fetch-depth: 0
         token: ${{ secrets.PAT_TOKEN }}
-    - uses: actions/setup-node@v1
+    - uses: actions/setup-node@39370e3970a6d050c480ffad4ff0ed4d3fdee5af # v4.1.0
       with:
         node-version: 12
     - name: Npm install
